turn_lexer_derive/test/test06-reject_global_attrs.stderr
error: #[token = ...] is not allowed at enum scope.
 --> $DIR/test06-reject_global_attrs.rs:5:3
  |
5 | #[token = "one"]
  |   ^^^^^

error: #[regex = ...] is not allowed at enum scope.
  --> $DIR/test06-reject_global_attrs.rs:15:3
   |
15 | #[regex = "[tT]wo."]
   |   ^^^^^
